[project]
name = "pmr-utils"
version = "0.1.0"
description = "Various PMR utilities that Andre has developed to help analyse the content of PMR. With a specific focus on CellML models."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "libcellml-python-utils",
    "nltk>=3.9.3",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]

[tool.uv.sources]
libcellml-python-utils = { path = "../../../SPARC/REVEAL-MVP/cellml-to-fc/libcellml_python_utils", editable = true }
